see if waiting prevents timeouts

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,5 @@ before_install:
   - sudo apt-get install -qq ${PKGS}
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+install: travis_wait
 script: "./build.sh"
