--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,7 @@ compiler:
 cache: apt
 # run on new infra
 sudo: false
-addons:
-  apt:
-    - gperf
-    - autoconf
-    - automake
-    - autotools-dev
-    - libmpc-dev
-    - libmpfr-dev
-    - libgmp-dev
-    - gawk
-    - build-essential
-    - bison
-    - flex
-    - texinfo
+addons: {apt: {packages: gperf autoconf automake autotools-dev libmpc-dev libmpfr-dev libgmp-dev gawk build-essential bison flex texinfo } }
 
 env:
   global:
