--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,7 @@ env:
 git:
       submodules: false # we'll do git submodule update ourselves
 before_install:
-    # change shell to bash 
-  # - echo $0
-  # - sudo chsh -s /bin/bash travis
-  # - echo $0
-  # - ls -la /bin/sh
-  # - sudo rm /bin/sh
-  # - sudo ln -s /bin/bash /bin/sh
-  # - ls -la /bin/sh
-  - echo $SHELL
-  - gcc --verion
+  - gcc --version
   - pwd
   - mkdir ~/riscv_install
     # fix urls to be https to avoid pubkey issues
