--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: cpp
-compiler:
-  - gcc
+# compiler:
+#   - gcc
 cache: apt
 # run on new infra
 sudo: false
-addons: {apt: {packages: gperf autoconf automake autotools-dev libmpc-dev libmpfr-dev libgmp-dev gawk build-essential bison flex texinfo g++-4.8} }
+addons: {apt: {packages: gperf autoconf automake autotools-dev libmpc-dev libmpfr-dev libgmp-dev gawk build-essential bison flex texinfo gcc-4.8 g++-4.8} }
 
 env:
   global:
