--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,23 @@ language: cpp
 cache: apt
 # run on new infra
 sudo: false
-addons: {apt: {packages: gperf autoconf automake autotools-dev libmpc-dev libmpfr-dev libgmp-dev gawk build-essential bison flex texinfo gcc-4.8 g++-4.8} }
+addons:
+  apt:
+    packages:
+      - gcc-4.8
+      - g++-4.8
+      - gperf
+      - autoconf
+      - automake
+      - autotools-dev
+      - libmpc-dev
+      - libmpfr-dev
+      - libgmp-dev
+      - gawk
+      - build-essential
+      - bison
+      - flex
+      - texinfo
 
 env:
   global:
