try adding source for gcc package

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ cache: apt
 sudo: false
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
       - gcc-4.8
       - g++-4.8
