--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ env:
   global:
     # required packages to install
     - RISCV="/home/travis/riscv_install"
-git:
-      submodules: false # we'll do git submodule update ourselves
+# git:
+#       submodules: false # we'll do git submodule update ourselves
 before_install:
   - pwd
   - mkdir ~/riscv_install
@@ -40,15 +40,15 @@ before_install:
   # - cd riscv-tests && sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules && git submodule update --init && cd ..
   # - cd riscv-llvm && sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules && git submodule update --init && cd ..
     # set jobs to 1 to avoid running out of memory on the travis machine
-  - sed -i.bak 's/JOBS=16/JOBS=4/' build.common
+  # - sed -i.bak 's/JOBS=16/JOBS=4/' build.common
   # - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   # - sudo apt-get update -qq
   # - sudo apt-get install -qq ${PKGS}
   # - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   # - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-  - $CC --version
-  - ls /usr/bin/gcc*
+  # - $CC --version
+  # - ls /usr/bin/gcc*
   - export CXX="g++-4.8" CC="gcc-4.8"
-  - $CC --version
+  # - $CC --version
 install: travis_wait
 script: "./build.sh"
