--- a/.travis.yml
+++ b/.travis.yml
@@ -55,3 +55,9 @@ script:
   - ./build.sh
   - ls $RISCV
   - ls $RISCV/riscv64-unknown-elf
+  - cd riscv-pk
+  - mkdir build
+  - cd build
+  - ../configure --prefix=$RISCV/riscv64-unknown-elf --host=riscv64-unknown-elf
+  - make
+  - make install
