--- a/.travis.yml
+++ b/.travis.yml
@@ -56,11 +56,11 @@ before_install:
 install: travis_wait
 script:
   - ./build.sh
-  # - ls $RISCV
-  # - ls $RISCV/riscv64-unknown-elf
-  # - cd riscv-pk
-  # - mkdir build
-  # - cd build
-  # - ../configure --prefix=$RISCV/riscv64-unknown-elf --host=riscv64-unknown-elf
-  # - make
-  # - make install
+  - ls $RISCV
+  - ls $RISCV/riscv64-unknown-elf
+  - cd riscv-pk
+  - mkdir build
+  - cd build
+  - ../configure --prefix=$RISCV/riscv64-unknown-elf --host=riscv64-unknown-elf
+  - make
+  - make install
