--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
   - cd riscv-pk
   - mkdir build
   - cd build
-  - ../configure --prefix=$RISCV/riscv64-unknown-elf --host=riscv64-unknown-elf
+  - CC=riscv64-unknown-elf-gcc CXX=riscv64-unknown-elf-g++ ../configure --prefix=$RISCV/riscv64-unknown-elf --host=riscv64-unknown-elf
   - cat config.log
   - make
   - make install
