--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,8 @@ before_install:
   # - cd riscv-llvm && sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules && git submodule update --init && cd ..
     # set jobs to 1 to avoid running out of memory on the travis machine
   - sed -i.bak 's/JOBS=16/JOBS=6/' build.common
+  # need to build pk with riscv-gcc
+  - sed -i.bak 's/build_project riscv-pk/CC=riscv64-unknown-elf-gcc CXX=riscv64-unknown-elf-g++ build_project riscv-pk/' build.sh
   # - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   # - sudo apt-get update -qq
   # - sudo apt-get install -qq ${PKGS}
@@ -55,15 +57,16 @@ before_install:
   # - $CC --version
 install: travis_wait
 script:
+  - cat build.sh
   - ./build.sh
-  - ls $RISCV
-  - ls $RISCV/bin
-  - ls $RISCV/riscv64-unknown-elf
-  - cd riscv-pk
-  - mkdir build
-  - cd build
+  # - ls $RISCV
+  # - ls $RISCV/bin
+  # - ls $RISCV/riscv64-unknown-elf
+  # - cd riscv-pk
+  # - mkdir build
+  # - cd build
   # - CC=riscv64-unknown-elf-gcc CXX=riscv64-unknown-elf-g++ ../configure --prefix=$RISCV/riscv64-unknown-elf --host=riscv64-unknown-elf
-  - ../configure --prefix=$RISCV/riscv64-unknown-elf --build=riscv64-unknown-elf
-  - cat config.log
-  - make
-  - make install
+  # - ../configure --prefix=$RISCV/riscv64-unknown-elf --build=riscv64-unknown-elf
+  # - cat config.log
+  # - make
+  # - make install
