--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_install:
     # set jobs to 1 to avoid running out of memory on the travis machine
   - sed -i.bak 's/JOBS=16/JOBS=8/' build.common
   # need to build pk with riscv-gcc
-  - sed -i.bak 's/riscv-pk/riscv-pk CC=riscv64-unknown-elf-gcc CXX=riscv64-unknown-elf-g++/' build.sh
+  # - sed -i.bak 's/riscv-pk/riscv-pk CC=riscv64-unknown-elf-gcc CXX=riscv64-unknown-elf-g++/' build.sh
   # - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   # - sudo apt-get update -qq
   # - sudo apt-get install -qq ${PKGS}
@@ -62,7 +62,7 @@ before_install:
   # - gcc --version
 install: travis_wait
 script:
-  - cat build.sh
+  # - cat build.sh
   - ./build.sh
   # - ls $RISCV
   # - ls $RISCV/bin
