--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,7 @@ before_install:
 # extra time duing long builds
 install: travis_wait
 
-script: ./build.sh
+script:
+  - cd riscv-gnu-toolchain
+  - ./configure --prefix=$RISCV
+  - time make -j 4 linux
