--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ before_install:
   - export CXX=g++-4.8 CC=gcc-4.8
   # only have 2 cores on the travis machine
   - sed -i.bak 's/JOBS=16/JOBS=8/' build.common
+  - echo $CFLAGS
 
 # extra time duing long builds
 install: travis_wait
