--- a/.travis.yml
+++ b/.travis.yml
@@ -46,4 +46,4 @@ install: travis_wait
 script:
   - cd riscv-gnu-toolchain
   - CC= CXX= ./configure --prefix=$RISCV
-  - CC= CXX= time make -j 4 linux
+  - CC= CXX= make -j 4 linux
